# vkobject-rs

./: .gitignore  Cargo.toml  Readme-CN.md  Readme.md  genflame.bat
.github/workflows/: rust.yml
assets/testobj/: avocado.mtl
shaders/: objdisp.fsh  objdisp.vsh  objdisp_refl.fsh  objdisp_refl.vsh  panosky.fsh  test.fsh  test.tcsh  test.vsh
src/: basics.rs  buffer.rs  buffervec.rs  cmdpool.rs  common.rs  context.rs  descpool.rs  descprops.rs  device.rs  framebuffer.rs  init.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  renderpass.rs  rendertarget.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  wavefrontobj.rs
