[package]
name = "vkobject-rs"
version = "0.0.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "The Vulkan object wrappers for Rust"
repository = "https://github.com/0xAA55/vkobject-rs"
keywords = ["Vulkan", "GLFW", "GameEngine", "Render", "GPU"]

[dependencies]
bincode = "2.0.1"
bitvec = "1.0.1"
half = "2.6.0"
image = "0.25.6"
nalgebra-glm = "0.20.0"
struct_iterable = "0.1.1"
turbojpeg = { version = "1.3.3", features = ["image"] }
vkcore-rs = "0.2.6"
glfw = { version = "0.59.0", features = ["image"], optional = true }

[dev-dependencies]
glfw = { version = "0.59.0", features = ["image"] }

[features]
glfw = ["dep:glfw"]

[profile.release]
lto = "fat"
