[package]
name = "vkobject-rs"
version = "0.0.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "The Vulkan object wrappers for Rust"
repository = "https://github.com/0xAA55/vkobject-rs"
keywords = ["Vulkan", "GLFW", "GameEngine", "Render", "GPU"]

[dependencies]
bincode = "2.0.1"
bitvec = "1.0.1"
half = "2.6.0"
image = "0.25.6"
nalgebra-glm = "0.20.0"
struct_iterable = "0.1.1"
turbojpeg = { version = "1.3.3", features = ["image"] }
vkcore-rs = "0.3.6"
glfw = { version = "0.59.0", features = ["vulkan", "image"], optional = true }

[dev-dependencies]
glfw = { version = "0.59.0", features = ["vulkan", "image"] }

[profile.release]
lto = "fat"

[features]
glfw = ["dep:glfw", "vkcore-rs/glfw"]
win32_khr = ["vkcore-rs/win32_khr"]
android_khr = ["vkcore-rs/android_khr"]
ios_mvk = ["vkcore-rs/ios_mvk"]
macos_mvk = ["vkcore-rs/macos_mvk"]
metal_ext = ["vkcore-rs/metal_ext"]
wayland_khr = ["vkcore-rs/wayland_khr"]
xcb_khr = ["vkcore-rs/xcb_khr"]
